@@ -9,6 +9,13 @@ Revision history for Fatal
 
         * TEST: Added t/lethal.t, a test for basic subclassing.
 
+        * TEST: Added t/usersub.t, a test for correct handling
+          of user subroutines.
+
+        * DOCUMENTATION: Noted in autodie.pm that user subs can
+          only be made Fatal/autodying if they've been declared
+          first.
+
 1.11_01 Fri Jul  4 12:53:11 AEST 2008
 
         * RELEASE CODENAME: "Aristotle", in thanks for the many
